--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <main class="container page">
     <h1>About Me</h1>
     <div class="about-grid">
-      <img src="images/coorg.jpg" alt="Tanvi exploring Coorg">
+      <img src="images/coorg.png" alt="Tanvi exploring Coorg">
       <div>
         <p>Hello! I'm <b>Tanvi</b> — a traveler who loves exploring calm destinations like Coorg, Ooty, and Coonoor. TravelScape is my way of sharing the moments and emotions I capture during my journeys.</p>
         <p>This blog also served as a practice project for me to learn and implement <b>DevOps automation</b> and static web deployment pipelines.</p>
