--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="container posts">
       <article class="card">
-        <img src="images/coorg.jpg" alt="Coorg">
+        <img src="images/coorg.png" alt="Coorg">
         <div class="card-body">
           <h2>Coorg 🌿</h2>
           <p>Misty hills, coffee plantations, and cascading waterfalls — Coorg feels like peace in motion.</p>
@@ -36,7 +36,7 @@
       </article>
 
       <article class="card">
-        <img src="images/ooty.jpg" alt="Ooty">
+        <img src="images/ooty.png" alt="Ooty">
         <div class="card-body">
           <h2>Ooty 🌸</h2>
           <p>Tea estates, cool breezes, and the nostalgic charm of the Nilgiri toy train.</p>
@@ -44,7 +44,7 @@
       </article>
 
       <article class="card">
-        <img src="images/isha.jpg" alt="Isha Foundation">
+        <img src="images/isha.png" alt="Isha Foundation">
         <div class="card-body">
           <h2>Isha Foundation 🕉️</h2>
           <p>Serene spaces surrounded by mountains and the inspiring presence of Adiyogi.</p>
@@ -52,7 +52,7 @@
       </article>
 
       <article class="card">
-        <img src="images/coonoor.jpg" alt="Coonoor">
+        <img src="images/coonoor.png" alt="Coonoor">
         <div class="card-body">
           <h2>Coonoor ☕</h2>
           <p>Gentle hills and fresh air — where every road turns into a beautiful frame.</p>
